--- a/iashell/iabrowsergui/MainBrowserForm.resx
+++ b/iashell/iabrowsergui/MainBrowserForm.resx
@@ -120,11 +120,90 @@
   <metadata name="contextMenuStripPictures.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1001, 15</value>
   </metadata>
+  <metadata name="StateImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>347, 161</value>
+  </metadata>
+  <data name="StateImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA0BAAAAJNU0Z0AUkBTAIBAQIB
+        AAEIAQABCAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAYADAAEgAwABAQEAAQgG
+        AAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
+        kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
+        MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
+        mQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFmAgABzAGZAgACzAIAAcwB
+        /wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEzAQABmQEAATMBAAHMAQAB
+        MwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFmAgABMwFmATMBAAEzAmYB
+        AAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFmAQABMwKZAQABMwGZAcwB
+        AAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEAATMBzAH/AQABMwH/ATMB
+        AAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFmAQABZgEAAWYBAAGZAQAB
+        ZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFmATMBzAEAAWYBMwH/AQAC
+        ZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFmAQABZgKZAQABZgGZAcwB
+        AAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEAAWYB/wIAAWYB/wEzAQAB
+        ZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZAQABmQEAAZkBAAHMAQAB
+        mQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEzAQABmQEzAWYBAAGZAWYB
+        mQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/AQABmQHMAgABmQHMATMB
+        AAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEAAZkBzAFmAQABmQH/AZkB
+        AAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHMAQABzAEAAZkBMwIAAcwC
+        MwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFmATMBAAGZAmYBAAHMAWYB
+        mQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZAQABzAGZAcwBAAHMAZkB
+        /wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/ATMBAAGZAf8BZgEAAcwB
+        /wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHMATMCAAH/AjMBAAH/ATMB
+        ZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJmAQAB/wFmAZkBAAH/AWYB
+        zAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHMAQAB/wGZAf8BAAH/AcwC
+        AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
+        /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
+        AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8BAAf0AvMC8gPCA8EDwgLyAvMR9ALzAfIBGwPDAxsB
+        8gLzCvRAAAf/AfMBCAGeAX0BAAFbAXcDdgF3AVsBAAF9AZ4BCAHzB/8B9Aj/AfYB8gGfAX4BXQEaAfsB
+        GgNdAX4BnwHyAfYI/wH0QAAF/wIAAZ4BwAHkAcABAAGeAcABnQGWAXYB5AIAAZ4CAAHBAgAF/wH0Bf8B
+        9gHyAaAB5QEaAX4CXQEbAxoBGwJdAX4BGwEaARsB8gH2Bf8B9EAABP8B9gEAAcABWgH6AQABnAEAAwgB
+        nQF2AZwBngHBAZ0BnAF8AQABwAEABf8B9AX/AfIBnwEaAfsBGgVdARoB+wEaBV0BfgGfAfIF/wH0QAAD
+        /wHyAwABfAF2AZsCnAHAAp0BlgF2AXsBnAHkAXcBwAEAAcADAAHyA/8B9AP/AcMBGgEbAX4BGwMaARsB
+        XQEbBRoBGwFdARsBGgEbAX4BGwEaAcMD/wH0QAAD/wEAAVsBAAF8AXsEdgH6B3YB+gHAAQgBAAF8AQAB
+        WwEAA/8B9AP/ARoFXQEaAfsBGgE7ARoB+wEaATsBGgH7ARoBXQEaAfsBGgNdARoD/wH0QAAB/wHzAcIC
+        AAF8AnsBdgN7BXYDewF2AZYBnQGcAXsBAAFbAwAB/wH0Af8B9gHyARsDXQEbARoD+wEaAvsBGgFdARoC
+        +wUaARsBXQEbAfIB9gH/AfRAAAH/AcIBfQHkAXwBewJ2AfoBAAF8AXsEdgH6AQABfAF7BXYBdwJbAeQB
+        AAH/AfQB/wHyAZ8BfgJdATsBGgf7ARoBXQEaA/sBGgE7ARoB+wEaAV0BfgGfAfIB/wH0QAAB/wHBAXwB
+        lgF7AXwDdgN7AXYDewF2A3sBdgJ7AXwBdgGcAZ4BwAGWAcEB/wH0Af8BoAEaARsBXQEbAxoD+wEaA/sD
+        GgP7BRoBGwF+ARsB/wH0QAAB/wHBCnYB+gEAAXwBewR2AfoBAAF8AXsBdgGdAQgBnQF2AcEB/wH0AfYB
+        5QH7ARoBXQEaAfsBGgE7ARoB+wEaATsBGgP7ARoBOwEaA/sBGgFdARoB+wEaAV0BGgH2AfRAAAHCAZ4B
+        lgF7AXYDewV2A3sFdgN7AXYBlgGdApwCAAHzAfICGgEbAV0BGgL7BRoD+wMaA/sDGgL7ARoBXQEbAfIB
+        80AAAZcCnQF3AfoBAAF8AQAB+gd2AfoHdgH6AnYBnAGeAQAB5AHCAZ8BfgJdATsBGgP7ARoBXQEaA/sB
+        GgFdARoD+wEaATsBGgP7ARoBXQF+AZ8B80AAAZcBwAG7AZwBdgN7AXYDewV2A3sBdgN7A3YBnAGeAQAB
+        WwHCAX4CXQEbARoD+wMaA/sFGgP7AxoC+wEaAl0BfgHyQAABWwGeAQgBnQV2AXsBfAEAAfoEdgF7AXwB
+        AAH6AQABfAF7A3YBnAGeAQABWwHCA10BGgP7ARoBOwEaA/sBGgE7ARoB+wEaATsBGgP7ARoBOwEaAfsB
+        GgNdARtAAAFaAQABCAGdAXYBfAJ7AXYDewF2A3sBdgN7AXYDewN2AZwDAAHCAV0BGwEaA/sFGgL7ARoB
+        XQEaAvsDGgL7ARoBXQEaAvsBGgEbAV0BG0AAAfoBwAEIAZ0BdgF7AXwBAAH6BHYBewF8AQAB+gd2AfoD
+        dgH6AQABfAHCAV0BGgP7ARoBXQEaAfsBGgE7ARoB+wEaAV0BGgP7ARoBOwEaAfsBGgFdARoD+wEaAV0B
+        G0AAAXYBlgGdAZYBdgN7BXYDewF2A3sFdgJ7AZwBwAEAAXwBwgMaA/sBGgL7ARoBOwEaAvsDGgL7ARoB
+        XQEaAvsBGgP7AxoBw0AABHYB+gd2AfoEdgF7AXwBAAH6BHYBewF8AQABCAEAAXwBwgH7ARoBXQEaBfsB
+        GgE7ARoD+wEaATsBGgH7ARoBXQEaBfsBGgFdARoB+wHDQAABdwGcAZ0BlgV2A3sBdgN7AXYDewF2A3sB
+        dgJ7AeABCAGeAQABwgEaARsBXQEaBPsDGgP7AxoC+wEaAV0BGgL7ARoC+wEaAV0BGwEaAcNAAAFbAZ4B
+        CAGdBHYB+gEAAXwBewF2AXsBfAEAAfoEdgF7AXwBAAH6AnYBnQEIAZ4BWwHCA10BGgP7ARoBOwEaA/sB
+        GgFdARoD+wEaATsBGgH7ARoBOwEaAfsBGgNdARtAAAGXAcABuwGcAXYDewF2A3sBdgN7BXYDewN2AZwB
+        uwHAAZcBwgF+Al0BGgP7ARoBXQEaAvsFGgP7ARoD+wEaAvsBGgJdAX4B8kAAAVYBlwGdAXcB+gEAAXwB
+        ewR2AfoHdgH6BnYBlgGdAZcBVgHwAZ8BfgFdARoD+wEaAV0BGgH7ARoBOwEaAfsBGgE7ARoJ+wEaAV0B
+        fgGfAfNAAAGfAcABlgF7AXYDewl2A3sHdgF8AVUBfQGfAvIEGgP7ARoC+wEaATsBGgL7AxoD+wEaA/sE
+        GgHyAfNAAAH2AcEGdgH6B3YB+gEAAXwBewZ2AfoCMwGeAfYB9AH2AeUB+wEaAV0BGgX7ARoBOwEaA/sB
+        GgE7ARoB+wEaAV0BGgH7ARoBXQEaAfsB5QH2AfRAAAH/AZ4BlgGcAXsBfAN2A3sBdgN7AXYDewF2AnsB
+        fAF2AXsBAAFaAXcBngH/AfQB/wGgARoBGwFdARoG+wEaA/sDGgP7ARoC+wEaAV0BGwEaAaAB/wH0QAAB
+        /wEAAeQBAAF8AXsDdgF7AXwBAAH6AQABfAF7BHYB+gEAAXwBewF2AXsBfAEAAcABAAH/AfQB/wHyAZ8B
+        fgFdARoJ+wEaAV0BGgf7ARoBXQF+AZ8B8gH/AfRAAAH/AwABWgGWAnsBdgN7AXYDewV2ATwBAAFaAXcF
+        AAH/AfQB/wH2AfIBGwFdARsDGgf7ARoH+wEaARsBXQEbAfIB9gH/AfRAAAP/AZ4BVgFaAXwBAAH6B3YB
+        +gV2AfoBWgNbAQAD/wH0A/8BGgVdARoN+wEaA10BGgP/AfRAAAP/AfIBngIAAVoBdgF7AZYBnAGdAZYD
+        dgOcAZYBewF2AVoBWwIAAfID/wH0A/8BwwEaARsBfgEbBRoD+wUaAvsBGgF+ARsBGgHDA/8B9EAABf8B
+        AAHkAZYBdgGWAZ0BuwEIAcAB+gJ2AZwBngHBAZ0BlgF2AZYB5AEABf8B9AX/AfIBnwEaAfsBGgNdARoB
+        +wEaBV0BGgH7ARoBnwHyBf8B9EAABf8CAAGeAcEBwAGdAQABngHkAXYCewIAAcABlwHAAsECAAX/AfQF
+        /wH2AfIBoAHlARoBfgJdARsDGgEbAl0BfgEaAeUBoAHyAfYF/wH0QAAI/wH2AQAB5AJbAXcBdgF7AXwB
+        AAFbAZcBVgGeCf8B9Aj/AfYB8gGfAX4DXQEaAfsBGgFdAX4BnwHyAfYI/wH0QAABQgFNAT4HAAE+AwAB
+        KAMAAYADAAEgAwABAQEAAQEGAAECFgAD//8A/wADAAs=
+</value>
+  </data>
   <metadata name="contextMenuPicuresTree.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1268, 15</value>
-  </metadata>
-  <metadata name="imageListPicturesSmall.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>690, 17</value>
   </metadata>
   <metadata name="imageListPicturesLarge.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>352, 17</value>
@@ -133,54 +212,11 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="statusStripBottom.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>132, 17</value>
+    <value>134, 161</value>
   </metadata>
-  <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>247, 17</value>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>282</value>
   </metadata>
-  <data name="imageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
-        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAARggAAAJNU0Z0AUkBTAMBAQAB
-        YAEBAWABAQEQAQABEAEABP8BCQEACP8BQgFNATYBBAYAATYBBAIAASgDAAFAAwABEAMAAQEBAAEIBgAB
-        BBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHcAcABAAHwAcoBpgEAATMFAAEzAQAB
-        MwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEAAzkBAAGAAXwB/wEAAlAB/wEAAZMB
-        AAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEzAwABZgMAAZkDAAHMAgABMwMAAjMC
-        AAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIAAWYBmQIAAWYBzAIAAWYB/wIAAZkD
-        AAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIAAcwBZgIAAcwBmQIAAswCAAHMAf8C
-        AAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFmAQABMwEAAZkBAAEzAQABzAEAATMB
-        AAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEAATMBZgIAATMBZgEzAQABMwJmAQAB
-        MwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEzAZkBZgEAATMCmQEAATMBmQHMAQAB
-        MwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEzAswBAAEzAcwB/wEAATMB/wEzAQAB
-        MwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEzAQABZgEAAWYBAAFmAQABmQEAAWYB
-        AAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZAQABZgEzAcwBAAFmATMB/wEAAmYC
-        AAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFmAZkBZgEAAWYCmQEAAWYBmQHMAQAB
-        ZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHMAf8BAAFmAf8CAAFmAf8BMwEAAWYB
-        /wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZAQABmQEAAZkBAAGZAQABzAEAAZkD
-        AAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZAWYBMwEAAZkBMwFmAQABmQFmAZkB
-        AAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEAApkB/wEAAZkBzAIAAZkBzAEzAQAB
-        ZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/ATMBAAGZAcwBZgEAAZkB/wGZAQAB
-        mQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZAQABzAEAAcwBAAGZATMCAAHMAjMB
-        AAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIAAcwBZgEzAQABmQJmAQABzAFmAZkB
-        AAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEAAcwCmQEAAcwBmQHMAQABzAGZAf8B
-        AALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIAAcwB/wEzAQABmQH/AWYBAAHMAf8B
-        mQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZAQABzAEzAgAB/wIzAQAB/wEzAWYB
-        AAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEAAcwCZgEAAf8BZgGZAQAB/wFmAcwB
-        AAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/AZkBzAEAAf8BmQH/AQAB/wHMAgAB
-        /wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/ATMBAAHMAf8BZgEAAv8BmQEAAv8B
-        zAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/AWYBAAEhAQABpQEAA18BAAN3AQAD
-        hgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEAAfAB+wH/AQABpAKgAQADgAMAAf8C
-        AAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AwABGwH0Af89AAFZAZ8CeQHzAf86AAFZAZ8CmgF6AXkB
-        nwEaARsB9DYAAVkBmgOgAXgBcAGfAaABnzYAAXkBegHDA6ABTwGXAZkBmgH0NQABeQF6AcMDoAF4AX0B
-        TwHDAXkB/zQAAZ8BmgGgAZ8BoAHDAaABVgHkAe8BwwHzNAABGgSgAX4B9gFWAX0BmAH/AZ80AAEaBaAB
-        fgFWAX0BmAIaNAABGgHDAqABGgF5AXgBlwHkAfE2AAH0ARoBwwGZAZcBmAEtAVYB5AHxOQAB8wEtAU8B
-        VQJWAcABcgGdNwAB/wEIAVQCVQFWAZcBCAH/OQABnQFVAU8BcgH0OwAB8wFPAQgB/3UAAUIBTQE+BwAB
-        PgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAHHAf8GAAHAAf8GAAHAAQ8GAAHAAQ8GAAHAAQcG
-        AAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQ8GAAHAAQ8GAAH4AQMGAAH4AQMGAAH+AQ8GAAH+AR8G
-        AAL/BgAL
-</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
